<resources>
    <string name="app_name">My Application</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="eq">=</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="mod">%</string>
    <string name="mul">*</string>
    <string name="dev">/</string>
    <string name="delete">&lt;-x-&gt;</string>
    <string name="clr">Clear</string>

</resources>