<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:layout_marginTop="172dp"
        android:background="#EEEEEE"
        android:gravity="end|center_vertical"
        android:padding="16dp"
        android:text="0"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/keypad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/keypad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- ROW TEMPLATE USED 4 TIMES -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clrAllbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clr" />

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/num1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/num2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/num3" />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/mul" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/num4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/num5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/num6" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/dev" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/num7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/num8" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/num9" />

            <Button
                android:id="@+id/btnMod"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/mod" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/add" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/num0" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/minus" />

            <Button
                android:id="@+id/btnEq"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/eq" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>